# chat

./: .eslintrc.json  README.md  commands.py  index.html  package-lock.json  package.json  pyproject.toml  settings.dev.toml  tailwind.config.js  tsconfig.json
src/api/: app.py  settings.py
src/api/endpoints/: broadcast.py  home.py
src/ui/: App.tsx  ConnectionStatus.tsx  index.css  socket.ts
