[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Wyatt Baldwin"]
readme = "README.md"

packages = [
    { include = "api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.94.1"}
runcommands = "^1.0a71"
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
select = ["E", "F", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
